# esp32-token-ticker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh.md  sdkconfig.defaults  sdkconfig.defaults.esp32s3
.github/workflows/: build.yml
components/esp_lcd_jd9853/: CMakeLists.txt
components/esp_lcd_jd9853/include/: esp_lcd_jd9853.h
components/esp_lcd_touch_axs5106/: CMakeLists.txt  esp_lcd_touch_axs5106.c
docs/images/: convert_boot_logo.py
docs/images/crypto_logos/: convert_to_lvgl.py
main/: CMakeLists.txt  board_config.h  boot_logo.c  boot_logo.h  button.c  crypto_logos.c  crypto_logos.h  display.c  display.h  font_mono_10.c  font_mono_12.c  font_mono_14.c  font_mono_18.c  font_mono_20.c  font_mono_24.c  homekit.c  homekit.h  idf_component.yml  led.c  led.h  price_fetch.c  price_fetch.h  time_sync.c  time_sync.h  token_config.c  token_config.h  token_ticker.c  ui.c  ui.h  ui_info.c  ui_internal.h  wifi.c  wifi.h  wifi_prov.c  wifi_prov.h  ws_price.c  ws_price.h
