idf_component_register(SRCS "token_ticker.c" "display.c" "ui.c" "ui_info.c" "button.c" "led.c" "wifi.c" "wifi_prov.c" "time_sync.c" "price_fetch.c" "crypto_logos.c" "font_mono_10.c" "font_mono_12.c" "font_mono_14.c" "font_mono_18.c" "font_mono_20.c" "font_mono_24.c"
                    INCLUDE_DIRS ".")
